force-app/main/default/objects/Tipo_de_inmueble__c/Tipo_de_inmueble__c.object-meta.xml
<CustomObject>
    <label>Tipo de inmueble</label>
    <nameField>
        <label>Nombre de Tipo de inmueble</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tipo de inmueble</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>