force-app/main/default/objects/Tipo_de_inmueble__c/fields/Ba_o_3__c.field-meta.xml
<CustomField>
    <fullName>Ba_o_3__c</fullName>
    <label>Baño 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>