force-app/main/default/objects/Tipo_de_inmueble__c/fields/Bano_3__c.field-meta.xml
<CustomField>
    <fullName>Bano_3__c</fullName>
    <label>Baño 3</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>