force-app/main/default/objects/Tipo_de_inmueble__c/fields/Bodega__c.field-meta.xml
<CustomField>
    <fullName>Bodega__c</fullName>
    <label>Bodega</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>