force-app/main/default/objects/Tipo_de_inmueble__c/fields/Escaleras__c.field-meta.xml
<CustomField>
    <fullName>Escaleras__c</fullName>
    <label>Escaleras</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>