force-app/main/default/objects/Tipo_de_inmueble__c/fields/Estudio__c.field-meta.xml
<CustomField>
    <fullName>Estudio__c</fullName>
    <label>Estudio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>