force-app/main/default/objects/Tipo_de_inmueble__c/fields/Fecha_alta__c.field-meta.xml
<CustomField>
    <fullName>Fecha_alta__c</fullName>
    <label>Fecha alta</label>
    <type>Date</type>
</CustomField>