force-app/main/default/objects/Tipo_de_inmueble__c/fields/Lavadero__c.field-meta.xml
<CustomField>
    <fullName>Lavadero__c</fullName>
    <label>Lavadero</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>