force-app/main/default/objects/Tipo_de_inmueble__c/fields/N_de_habitaciones__c.field-meta.xml
<CustomField>
    <fullName>N_de_habitaciones__c</fullName>
    <label>Nº de habitaciones</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>