force-app/main/default/objects/Tipo_de_inmueble__c/fields/Promocion__c.field-meta.xml
<CustomField>
    <fullName>Promocion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promocion</label>
    <referenceTo>Promocion__c</referenceTo>
    <relationshipLabel>Tipo de inmueble</relationshipLabel>
    <relationshipName>Tipo_de_inmueble</relationshipName>
    <type>Lookup</type>
</CustomField>