force-app/main/default/objects/Tipo_de_inmueble__c/fields/RepercusionZZCC__c.field-meta.xml
<CustomField>
    <fullName>RepercusionZZCC__c</fullName>
    <label>Repercusión ZZCC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>