force-app/main/default/objects/Tipo_de_inmueble__c/fields/Salon_cocina__c.field-meta.xml
<CustomField>
    <fullName>Salon_cocina__c</fullName>
    <label>Salon-cocina</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>