force-app/main/default/objects/Tipo_de_inmueble__c/fields/Salon_Secundario__c.field-meta.xml
<CustomField>
    <fullName>Salon_Secundario__c</fullName>
    <label>Salon Secundario</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>