force-app/main/default/objects/Tipo_de_inmueble__c/fields/sup_aparcamientoensuperficie__c.field-meta.xml
<CustomField>
    <fullName>sup_aparcamientoensuperficie__c</fullName>
    <description>metros cuadrados de aparcamiento en superficie</description>
    <label>Aparcamiento en superficie</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>