force-app/main/default/objects/Tipo_de_inmueble__c/fields/sup_Armario_tecnico__c.field-meta.xml
<CustomField>
    <fullName>sup_Armario_tecnico__c</fullName>
    <label>Armario técnico</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>