force-app/main/default/objects/Tipo_de_inmueble__c/fields/sup_Aseo__c.field-meta.xml
<CustomField>
    <fullName>sup_Aseo__c</fullName>
    <label>Aseo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>