force-app/main/default/objects/Tipo_de_inmueble__c/fields/sup_Bano_2__c.field-meta.xml
<CustomField>
    <fullName>sup_Bano_2__c</fullName>
    <label>Baño 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>