force-app/main/default/objects/Tipo_de_inmueble__c/fields/sup_Hall__c.field-meta.xml
<CustomField>
    <fullName>sup_Hall__c</fullName>
    <label>Hall</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>