force-app/main/default/objects/Tipo_de_inmueble__c/fields/sup_porche__c.field-meta.xml
<CustomField>
    <fullName>sup_porche__c</fullName>
    <description>superficie del porche</description>
    <label>Porche</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>