force-app/main/default/objects/Tipo_de_inmueble__c/fields/sup_Tendedero__c.field-meta.xml
<CustomField>
    <fullName>sup_Tendedero__c</fullName>
    <label>Tendedero</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>