force-app/main/default/objects/Tipo_de_inmueble__c/fields/SupConstTotal__c.field-meta.xml
<CustomField>
    <fullName>SupConstTotal__c</fullName>
    <label>Sup. Const. Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>