force-app/main/default/objects/Tipo_de_inmueble__c/fields/SupConstTotalZZCCZExtDescubierta__c.field-meta.xml
<CustomField>
    <fullName>SupConstTotalZZCCZExtDescubierta__c</fullName>
    <label>Sup.Const total +ZZCC +Z.Ext.Descubierta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>