force-app/main/default/objects/Tipo_de_inmueble__c/fields/SupConstZZCCGaraje__c.field-meta.xml
<CustomField>
    <fullName>SupConstZZCCGaraje__c</fullName>
    <label>Sup. Const + ZZCC garaje</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>