force-app/main/default/objects/Tipo_de_inmueble__c/fields/SupConstZZCCTrastero__c.field-meta.xml
<CustomField>
    <fullName>SupConstZZCCTrastero__c</fullName>
    <label>Sup. Const + ZZCC trastero</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>