force-app/main/default/objects/Tipo_de_inmueble__c/fields/Superficie_Construida_con_ZZCC_sin_Zon__c.field-meta.xml
<CustomField>
    <fullName>Superficie_Construida_con_ZZCC_sin_Zon__c</fullName>
    <label>Superficie Construida ZZCC sin Zon.Exter</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>