force-app/main/default/objects/Tipo_de_inmueble__c/fields/Superficie_Construida_m2__c.field-meta.xml
<CustomField>
    <fullName>Superficie_Construida_m2__c</fullName>
    <label>Superficie Construida Cerrada viv m2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>