force-app/main/default/objects/Tipo_de_inmueble__c/fields/Superficie_Jardines__c.field-meta.xml
<CustomField>
    <fullName>Superficie_Jardines__c</fullName>
    <label>Superficie Jardines</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>