force-app/main/default/objects/Tipo_de_inmueble__c/fields/Superficie_Terrazas_Cubiertas__c.field-meta.xml
<CustomField>
    <fullName>Superficie_Terrazas_Cubiertas__c</fullName>
    <label>Superficie Terrazas Cubiertas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>