force-app/main/default/objects/Tipo_de_inmueble__c/fields/Superficie_Util_Garaje_con_calles_m2__c.field-meta.xml
<CustomField>
    <fullName>Superficie_Util_Garaje_con_calles_m2__c</fullName>
    <label>Superficie Util Garaje con calles m2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>