force-app/main/default/objects/Tipo_de_inmueble__c/fields/SuperficieConstZZCCTCub100__c.field-meta.xml
<CustomField>
    <fullName>SuperficieConstZZCCTCub100__c</fullName>
    <label>Superficie Const. + ZZCC + T.Cub 100%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>