force-app/main/default/objects/Tipo_de_inmueble__c/fields/SuperficieUtilCon100TerrCub__c.field-meta.xml
<CustomField>
    <fullName>SuperficieUtilCon100TerrCub__c</fullName>
    <label>Superficie Util con 100% Terr.Cub</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>