force-app/main/default/objects/Tipo_de_inmueble__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipología</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Garaje</fullName>
            </value>
            <value>
                <fullName>Trastero</fullName>
            </value>
            <value>
                <fullName>Vivienda</fullName>
            </value>
            <value>
                <fullName>Local</fullName>
            </value>
            <value>
                <fullName>Mejoras</fullName>
            </value>
            <value>
                <fullName>Personalizacion</fullName>
                <label>Personalización</label>
            </value>
            <value>
                <fullName>Descuento</fullName>
                <isActive>false</isActive>
                <label>Descuento</label>
            </value>
            <value>
                <fullName>Mobiliario</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>