force-app/main/default/objects/Tipo_de_inmueble__c/fields/TipoPlazaGaraje__c.field-meta.xml
<CustomField>
    <fullName>TipoPlazaGaraje__c</fullName>
    <label>Tipo plaza garaje</label>
    <length>255</length>
    <type>Text</type>
</CustomField>