force-app/main/default/objects/Tipo_de_inmueble__c/fields/TipoTrastero__c.field-meta.xml
<CustomField>
    <fullName>TipoTrastero__c</fullName>
    <label>Tipo trastero</label>
    <length>255</length>
    <type>Text</type>
</CustomField>