force-app/main/default/objects/Tipo_de_inmueble__c/fields/Trastero_Instalaciones__c.field-meta.xml
<CustomField>
    <fullName>Trastero_Instalaciones__c</fullName>
    <label>Trastero/Instalaciones</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>