force-app/main/default/objects/Tipo_de_inmueble__c/fields/Vestibulo__c.field-meta.xml
<CustomField>
    <fullName>Vestibulo__c</fullName>
    <label>Vestíbulo</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>