force-app/main/default/objects/Tipo_de_inmueble__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Tipo__c</columns>
    <columns>N_de_habitaciones__c</columns>
    <columns>N_de_banos__c</columns>
    <columns>Promocion__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Promocion__c</field>
        <operation>contains</operation>
        <value>mirador</value>
    </filters>
    <label>Todos</label>
</ListView>