force-app/main/default/objects/Tipo_de_inmueble__c/listViews/Registrar_anejos.listView-meta.xml
<ListView>
    <fullName>Registrar_anejos</fullName>
    <columns>NAME</columns>
    <columns>Superficie_Util_Garaje_con_calles_m2__c</columns>
    <columns>SupConstZZCCGaraje__c</columns>
    <columns>Superficie_Util_m2__c</columns>
    <columns>Superficie_Util_Trastero_con_pasillos_m2__c</columns>
    <columns>SupConstZZCCTrastero__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Tipo__c</field>
        <operation>equals</operation>
        <value>Trastero</value>
    </filters>
    <filters>
        <field>Promocion__c</field>
        <operation>equals</operation>
        <value>GIJON100</value>
    </filters>
    <label>Registrar anejos</label>
</ListView>